package projecteIngredients;

public interface Cheese {
	public String toString();
}
