package projecteIngredients;

public interface Dough {
	public String toString();
}
