package projecteIngredients;

public class Eggplant implements Veggies {

	public String toString() {
		return "Eggplant";
	}
}
