package projecteIngredients;

public class Onion implements Veggies {

	public String toString() {
		return "Onion";
	}
}
