package projecteIngredients;

public interface Pepperoni {
	public String toString();
}
