package projecteIngredients;

public interface Sauce {
	public String toString();
}
