package projecteIngredients;

public interface Clams {
	public String toString();
}
