package projecteIngredients;

public class Mushroom implements Veggies {

	public String toString() {
		return "Mushrooms";
	}
}
