package projecteIngredients;

public class RedPepper implements Veggies {

	public String toString() {
		return "Red Pepper";
	}
}
