package projecteIngredients;

public class Spinach implements Veggies {

	public String toString() {
		return "Spinach";
	}
}
