package projecteIngredients;

public interface Veggies {
	public String toString();
}
